各所最適化

--- a/src/svg/spriter.css
+++ b/src/svg/spriter.css
@@ -1,184 +1,184 @@
 .spriter--agenda:before {
-	background: url("spriter-1f1cf422.svg") 0 0 no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 0 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--alarm-clock:before {
-	background: url("spriter-1f1cf422.svg") 0 2.2222222222222223% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 2.2222222222222223% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--alert:before {
-	background: url("spriter-1f1cf422.svg") 0 4.444444444444445% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 4.444444444444445% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--align-center:before {
-	background: url("spriter-1f1cf422.svg") 0 6.666666666666667% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 6.666666666666667% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--align-justify:before {
-	background: url("spriter-1f1cf422.svg") 0 8.88888888888889% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 8.88888888888889% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--align-left:before {
-	background: url("spriter-1f1cf422.svg") 0 11.11111111111111% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 11.11111111111111% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--align-right:before {
-	background: url("spriter-1f1cf422.svg") 0 13.333333333333334% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 13.333333333333334% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--anchor:before {
-	background: url("spriter-1f1cf422.svg") 0 15.555555555555555% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 15.555555555555555% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--android:before {
-	background: url("spriter-1f1cf422.svg") 0 17.77777777777778% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 17.77777777777778% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--angle-double-down:before {
-	background: url("spriter-1f1cf422.svg") 0 20% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 20% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--angle-double-left:before {
-	background: url("spriter-1f1cf422.svg") 0 22.22222222222222% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 22.22222222222222% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--angle-double-right:before {
-	background: url("spriter-1f1cf422.svg") 0 24.444444444444443% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 24.444444444444443% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--angle-double-up:before {
-	background: url("spriter-1f1cf422.svg") 0 26.666666666666668% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 26.666666666666668% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--angle-down:before {
-	background: url("spriter-1f1cf422.svg") 0 28.88888888888889% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 28.88888888888889% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--angle-left:before {
-	background: url("spriter-1f1cf422.svg") 0 31.11111111111111% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 31.11111111111111% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--angle-right:before {
-	background: url("spriter-1f1cf422.svg") 0 33.333333333333336% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 33.333333333333336% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--angle-up:before {
-	background: url("spriter-1f1cf422.svg") 0 35.55555555555556% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 35.55555555555556% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--announcement:before {
-	background: url("spriter-1f1cf422.svg") 0 37.77777777777778% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 37.77777777777778% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--apple:before {
-	background: url("spriter-1f1cf422.svg") 0 40% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 40% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--archive:before {
-	background: url("spriter-1f1cf422.svg") 0 42.22222222222222% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 42.22222222222222% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrow:before {
-	background: url("spriter-1f1cf422.svg") 0 44.44444444444444% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 44.44444444444444% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrow-circle-down:before {
-	background: url("spriter-1f1cf422.svg") 0 46.666666666666664% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 46.666666666666664% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrow-circle-left:before {
-	background: url("spriter-1f1cf422.svg") 0 48.888888888888886% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 48.888888888888886% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrow-circle-right:before {
-	background: url("spriter-1f1cf422.svg") 0 51.111111111111114% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 51.111111111111114% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrow-circle-up:before {
-	background: url("spriter-1f1cf422.svg") 0 53.333333333333336% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 53.333333333333336% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrow-down:before {
-	background: url("spriter-1f1cf422.svg") 0 55.55555555555556% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 55.55555555555556% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrow-left:before {
-	background: url("spriter-1f1cf422.svg") 0 57.77777777777778% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 57.77777777777778% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrow-right:before {
-	background: url("spriter-1f1cf422.svg") 0 60% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 60% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrow-top-left:before {
-	background: url("spriter-1f1cf422.svg") 0 62.22222222222222% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 62.22222222222222% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrow-top-right:before {
-	background: url("spriter-1f1cf422.svg") 0 64.44444444444444% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 64.44444444444444% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrow-up:before {
-	background: url("spriter-1f1cf422.svg") 0 66.66666666666667% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 66.66666666666667% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrows-corner:before {
-	background: url("spriter-1f1cf422.svg") 0 68.88888888888889% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 68.88888888888889% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrows-horizontal:before {
-	background: url("spriter-1f1cf422.svg") 0 71.11111111111111% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 71.11111111111111% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--arrows-vertical:before {
-	background: url("spriter-1f1cf422.svg") 0 73.33333333333333% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 73.33333333333333% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--back-left:before {
-	background: url("spriter-1f1cf422.svg") 0 75.55555555555556% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 75.55555555555556% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--back-right:before {
-	background: url("spriter-1f1cf422.svg") 0 77.77777777777777% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 77.77777777777777% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--bag:before {
-	background: url("spriter-1f1cf422.svg") 0 80% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 80% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--bar-chart:before {
-	background: url("spriter-1f1cf422.svg") 0 82.22222222222223% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 82.22222222222223% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--bar-chart-alt:before {
-	background: url("spriter-1f1cf422.svg") 0 84.44444444444444% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 84.44444444444444% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--basketball:before {
-	background: url("spriter-1f1cf422.svg") 0 86.66666666666667% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 86.66666666666667% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--bell:before {
-	background: url("spriter-1f1cf422.svg") 0 88.88888888888889% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 88.88888888888889% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--blackboard:before {
-	background: url("spriter-1f1cf422.svg") 0 91.11111111111111% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 91.11111111111111% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--bolt:before {
-	background: url("spriter-1f1cf422.svg") 0 93.33333333333333% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 93.33333333333333% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--bolt-alt:before {
-	background: url("spriter-1f1cf422.svg") 0 95.55555555555556% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 95.55555555555556% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--book:before {
-	background: url("spriter-1f1cf422.svg") 0 97.77777777777777% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 97.77777777777777% 0 no-repeat;
+	background-size: auto 1em;
 }
 .spriter--bookmark-alt:before {
-	background: url("spriter-1f1cf422.svg") 0 100% no-repeat;
-	background-size: 1em;
+	background: url("spriter-c0e02408.svg") 100% 0 no-repeat;
+	background-size: auto 1em;
 }
