--- a/src/svg/templ/templ.css
+++ b/src/svg/templ/templ.css
@@ -7,7 +7,7 @@
 	{{#hasCommon}}background-position: {{position.relative.xy}};{{/hasCommon}}{{^hasCommon}}background: url("{{{sprite}}}") {{position.relative.xy}} no-repeat;{{/hasCommon}}{{#dimensions.inline}}
 	width: {{width.outer}}px;
 	height: {{height.outer}}px;{{/dimensions.inline}}
-	background-size: 1em;
+	background-size: auto 1em;
 }{{#dimensions.extra}}
 
 {{#selector.dimensions}}{{expression}}{{^last}},
