--- a/src/common.css
+++ b/src/common.css
@@ -31,6 +31,7 @@ body{
 	display: inline-block;
 	width: 1em;
 	height: 1em;
+	fill: #f00;
 }
 
 .size-XL:before {
@@ -48,4 +49,5 @@ body{
 .size-S:before {
 	font-size: 2rem;
 }
+
 
